--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,14 @@ html {
   margin: 0;
   padding: 0;
 }
+
+@font-face {
+    font-family: "CyrillicOld";
+    src: url(https://kolodcev-dom.github.io/cyrillicold.ttf);
+    font-weight: 400;
+    font-display: swap
+}
+
 *:focus {
   outline: transparent;
 }
